--- a/paper/abstract-nl/extended-abstract.tex
+++ b/paper/abstract-nl/extended-abstract.tex
@@ -63,7 +63,7 @@
 	\maketitle
 	
 	\begin{abstract}
-	Sinds de introductie van traditionele softwareontwikkelingsmodellen in de vorige eeuw is de omvang en de complexiteit van software alsmaar toegenomen. Deze ontplooiingen hebben softwareontwikkelaars ertoe aangezet om over te schakelen op zogenaamde Agile ontwikkelingsmethoden, waarin frequent samenvoegen van code en automatisch testen centraal staan. Op lange termijn zal de stijgende omvang van software echter een bijkomend negatief effect hebben op de grootte van het testpakket\footnote{De verzameling van alle tests in de applicatie.}. Om dit schaalbaarheidsprobleem op te lossen, stelt deze masterproef een framework en een nieuw prioriteringsalgoritme voor. Hierbij worden tests gerangschikt volgens de kans op falen. Het framework is ge\"evalueerd op twee bestaande applicaties en de resultaten zijn veelbelovend.
+	Sinds de introductie van traditionele softwareontwikkelingsmodellen in de vorige eeuw is de omvang en de complexiteit van software almaar toegenomen. Deze ontplooiingen hebben softwareontwikkelaars ertoe aangezet om over te schakelen op zogenaamde Agile ontwikkelingsmethoden, waarin frequent samenvoegen van code en automatisch testen centraal staan. Op lange termijn zal de toenemende omvang van software echter een bijkomend negatief effect hebben op de grootte van het testpakket\footnote{De verzameling van alle tests in de applicatie.}. Om dit probleem van schaalbaarheid op te lossen, stelt deze masterproef een framework en een nieuw prioriteringsalgoritme voor. Hierbij worden tests gerangschikt volgens kans op falen. Het framework is ge\"evalueerd op twee bestaande applicaties en de resultaten zijn veelbelovend.
 	\end{abstract}
 
 	\begin{keywords}
