--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -12,4 +12,4 @@ Given the complexity and rapid pace at which software is being built today, it i
 
 \noindent We can take three approaches to resolve this issue and reduce the time waiting for the test results: \acrfull{tsm}, \acrfull{tcs} and \acrfull{tcp}. The main subject of this thesis will be to implement a framework for \acrshort{tcp}.
 
-\noindent The structure of this thesis is as follows. The next chapter will introduce essential concepts used in modern software engineering. \Cref{ch:related-work} will elaborate more on the three mentioned approaches and present accompanying algorithms. The implementation details of the new framework will be discussed in \cref{ch:velocity}. Afterwards, \cref{ch:evaluation} will evaluate the performance of this framework and provide insights into the characteristics of a typical test suite. More specifically, this chapter will investigate the probability of (repeated) test failure and the average duration of a test run. Finally, \cref{ch:conclusion} will present additional ideas and improvements to the framework.
+\noindent The structure of this thesis is as follows. The next chapter will introduce essential concepts used in modern software engineering. \Cref{ch:related-work} will elaborate more on the three mentioned approaches and present accompanying algorithms. The implementation details of the new framework will be discussed in \Cref{ch:velocity}. Afterwards, \Cref{ch:evaluation} will evaluate the performance of this framework and provide insights into the characteristics of a typical test suite. More specifically, this chapter will investigate the probability of (repeated) test failure and the average duration of a test run. Finally, \Cref{ch:conclusion} will present additional ideas and improvements to the framework.
