--- a/paper/related-work/adoption.tex
+++ b/paper/related-work/adoption.tex
@@ -1,6 +1,7 @@
 % !TeX root = ../thesis.tex
 
 \section{Adoption in testing frameworks}
+% wat is these?
 In the final section of this chapter, we will investigate how existing software testing frameworks have implemented these and other optimisation techniques.
 
 \input{related-work/adoption/gradle-junit.tex}
