--- a/paper/software-engineering/agile-software-development/continuous-integration/github-actions.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration/github-actions.tex
@@ -1,7 +1,7 @@
 % !TeX root = ../../../thesis.tex
 
 \subsubsection{\github{} Actions}\label{sssec:github-actions}
-Following the successful beta of \githubactions{} which had started in August 2019, \github launched its \CI{} system later that year in November\footnote{\url{https://github.blog/2019-08-08-github-actions-now-supports-ci-cd/}}. \githubactions{} executes builds in the cloud on servers owned by \github{}, restricting its use to \github{} repositories. Support for \github{} Enterprise repositories is not currently available. Developers can define builds using workflows, which can run both on Linux, Windows as well as macOS hosts. Private repositories are allowed a fixed amount of free build minutes per month, while builds of public repositories are always free of charges  \cite{githubactions}. Similar to Jenkins, we can extend \githubactions{} with custom plugins. These plugins can be composed either using a Docker container or using native JavaScript \cite{aboutgithubactions}. However, since this service is recent, it does not yet offer many plugins.
+Following the successful beta of \githubactions{} which had started in August 2019, \github{} launched its \CI{} system later that year in November\footnote{\url{https://github.blog/2019-08-08-github-actions-now-supports-ci-cd/}}. \githubactions{} executes builds in the cloud on servers owned by \github{}, restricting its use to \github{} repositories. Support for \github{} Enterprise repositories is not currently available. Developers can define builds using workflows, which can run both on Linux, Windows as well as macOS hosts. Private repositories are allowed a fixed amount of free build minutes per month, while builds of public repositories are always free of charges  \cite{githubactions}. Similar to Jenkins, we can extend \githubactions{} with custom plugins. These plugins can be composed either using a Docker container or using native JavaScript \cite{aboutgithubactions}. However, since this service is recent, it does not yet offer many plugins.
 
 \begin{figure}[htbp!]
 	\centering
