--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -184,6 +184,9 @@
 \crefname{listing}{example}{examples}  
 \Crefname{listing}{Example}{Examples}
 
+% ZET PAGINANUMMERS BIJ ANDERE DINGEN.
+% GOOI EVENTUEEL SUMMARIES UIT INHOUDSTAFEL.
+
 \begin{document}
 \onehalfspacing
 	
