--- a/paper/velocity/alpha.tex
+++ b/paper/velocity/alpha.tex
@@ -13,6 +13,7 @@ Besides the earlier presented Greedy, HGS and ROCKET algorithms (\cref{sec:relat
 	
 	\item $C = \{c_1, \dots, c_m\}$: the set of all source code lines in the application, that are covered by at least one test case $t \in TS$.
 	
+	% current - j swappen
 	\item $F = \begin{bmatrix}
 			F_1 & \dots & F_n
 		\end{bmatrix}$: the failure statuses of each test case.
@@ -50,11 +51,14 @@ Besides the earlier presented Greedy, HGS and ROCKET algorithms (\cref{sec:relat
 	\right.
 \]
 
-\noindent Next, the algorithm executes every affected test case that has also failed at least once in its three previous executions. Consecutive failures reflect the behaviour of a developer attempting to resolve the bug that caused the test case failure in the first run of the chain. By particularly executing the affected failing test cases as early as possible, we anticipate a developer that resolves multiple failures one by one. This idea is also used by the ROCKET algorithm (\cref{ssec:alg-rocket}). If multiple affected test cases are failing, the algorithm sorts those test cases by assigning a higher priority to the test case with the lowest execution time. After every prioritised test case, we update $C$ by subtracting the source code lines that are now covered by that test case.\\
+\noindent Next, the algorithm executes every affected test case that has also failed at least once in its three previous executions. Consecutive failures reflect the behaviour of a developer attempting to resolve the bug that caused the test case failure in the first run of the chain. By particularly executing the affected failing test cases as early as possible, we anticipate a developer that resolves multiple failures one by one. This idea is also used by the ROCKET algorithm (\cref{ssec:alg-rocket}). If multiple affected test cases are failing, the algorithm sorts those test cases by assigning a higher priority to the test case with the lowest execution time. After every selection, we update $C$ by subtracting the source code lines that are now covered by that test case.\\
 
 \noindent Afterwards, we repeat the same procedure for every failed (yet unaffected) test case and likewise use the execution time as a tie-breaker. Where the previous phase helps a developer to get fast feedback about whether or not they have resolved the issue, this phase ensures that the other failing test cases are executed early as well. Similar to the previous step, we again update $C$ after every prioritised test case.\\
 
-\noindent Research (\cref{ssec:results-rq1}) has indicated that on average, a minor fraction ($\SIrange{10}{20}{\percent}$) of all test runs will contain a failed test case. As a result, the previous two phases will often not select any test case at all. Therefore, we will now focus on executing test cases that cover affected code lines. More specifically, the third phase of the algorithm will execute every affected test case, sorted by decreasing cardinality of the intersection between $C$ and the test group of that test case. After every selected test case, we will update $C$ as well. Since this phase uses $C$ in the comparison, every selected test case can influence the next selected test case. The update process of $C$ will ultimately lead to some affected test cases not strictly requiring to be executed, similar to the Greedy algorithm (\cref{ssec:alg-greedy}).\\
+\noindent Research (\cref{ssec:results-rq1}) has indicated that on average, a minor fraction ($\SIrange{10}{20}{\percent}$) of all test runs will contain a failed test case. As a result, the previous two phases will often not select any test case at all. Therefore, we will now focus on executing test cases that cover affected code lines. More specifically, the third phase of the algorithm will execute every affected test case, sorted by decreasing cardinality of the intersection between $C$ and the test group of that test case. 
+
+% hoe wordt C geupdate? -> aangeven dat het op dezelfde manier wordt geupdate
+After every selection, we will update $C$ as well. Since this phase uses $C$ in the comparison, every selected test case can influence the next selected test case. The update process of $C$ will ultimately lead to some affected test cases not strictly requiring to be executed, similar to the Greedy algorithm (\cref{ssec:alg-greedy}).\\
 
 \noindent In the last phase, the algorithm will select the test cases based on the cardinality of the intersection between $C$ and their test group. We repeat this process until $C$ is empty and update $C$ accordingly. When $C$ is empty, the algorithm will yield the remaining test cases. Notice that these test cases will not contribute to the test coverage whatsoever since the previous iteration would already have selected every test case that would incur additional coverage. Subsequently, these test cases are de facto redundant and are therefore candidates for removal by TSM. However, since this is a prioritisation algorithm, these tests will still be executed and prioritised by increasing execution time.
 
