--- a/paper/summary/english.tex
+++ b/paper/summary/english.tex
@@ -7,6 +7,7 @@ In traditional software engineering, developers typically build the entire appli
 
 \noindent However, since the developers add new features to the application at a rapid pace, the number of test cases will increase at least as fast, since every code change requires at least one test case. As a result, the time it takes to (automatically) execute all the test cases will increase superlinearly as well, nullifying the benefits of maintaining a short release cycle.\\
 
+% plausible ipv probably
 \noindent The solution to this scalability problem is the introduction of optimisation techniques. This thesis presents three techniques: Test Suite Minimisation, Test Case Selection and Test Case Prioritisation. The objective of the first two techniques is to exclude test cases which will probably not fail from being executed. The latter technique does execute every test case but determines an execution sequence that prioritises test cases based on their probability of failing in the current run.\\
 
 \noindent This technique has been implemented in a framework which features three existing algorithms and one new prioritisation algorithm. Next, the effect of applying this technique has been evaluated on two existing applications. The results are promising, resulting in ten times less executed test cases and up to thirty times faster detection of failing test cases.\\
